--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="menu">
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="products.html">Products</a></li>
+<li><a href="technology.html">Home</a></li>
 <li><a href="https://github.com/schnet25">GitHub</a></li>
 <li><a href="http://wiki.basketbit.com">Wiki</a></li>
 </ul>
